# face_detection

./: .dockerignore  .gitignore  Dockerfile  ReadMe.md  config.py  docker-compose.prod.yaml  docker-compose.yaml  face_detection.py  index.py  main.py  pyproject.toml  query.py  requirements.txt  run_full_index.py  schema.sql  server.py  view_files.py
Models/: extracted_face.py  folder.py  photo.py  user_photo.py
Repositories/: db.py  extracted_face_repository.py  folder_repository.py  photo_repository.py  user_extracted_face_repository.py
Services/: employee_image_downloader.py  face_extractor.py  face_matcher.py  image_fetcher.py
controller/: folder_controller.py  photo_controller.py
images/: ds_model_facenet512_detector_retinaface_aligned_normalization_base_expand_0.pkl
jobs/: drive_index_job.py
repository/: employee_repository.py  folder_repository.py  photo_repository.py
service/: drive_service.py  face_service.py  photo_service.py
tests/: test_employee_repository.py  test_photo_service.py
utils/: embedding_util.py  face_detection_util.py  http_client.py
